--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@ a {
 	margin-left: -25px;
 }
 .contact1 {
-	background-image: url("http://infinityflamesoft.com/html/abal-preview/assets/img/contact_back.jpg");
+	background-image: url("http://www.infinityflamesoft.com/html/abal-preview/assets/img/contact_back.jpg");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -269,7 +269,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
 </div>
 
 <div id="fb-root"></div>
