--- a/index.html
+++ b/index.html
@@ -780,28 +780,6 @@ form input{
 
                          /*media quary */
 @media(max-width:420px) {
-   
-  
-form input{ 
-	display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
-}
-	
-	.item-card {
-		margin-bottom: 5%;
-	}
-	
-	.card-container, .wrapper {
-		margin-bottom: 5%;
-}
-
-	.map {
-		padding-right: 50px;
-		display:inline-block; width:50%; padding:20px; margin:20px;
-	}
-}
-
-
-	@media(max-width:420px) {
 	.featured-img {
 		margin-left: 0%; margin:15px; border-radius:1%; margin-top: 2%;
 	}
@@ -814,10 +792,17 @@ form input{
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 	
-	.map {
-	padding-right: 50px;
-	display:inline-block; width:50%; padding:20px; margin:20px;
+form input{ 
+	display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
+}
+	
+	.item-card {
+		margin-bottom: 5%;
 	}
+	
+	.card-container, .wrapper {
+		margin-bottom: 5%;
+}
 }
 
 	@media(max-width:767px) {
@@ -848,14 +833,10 @@ form input{
     margin-top: 5%;
 	
   }
-  
-  .map {
-	height: 685px;
-	width: 100%;
-	display: block;
-	background: #f0f0f0;
-	margin: 50px 0 20px 0;
+  #map {
+    margin-top: 5%;
 }
+
 </style>
 </head>
 
@@ -889,7 +870,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
 </div>
 
 <div id="fb-root"></div>
@@ -898,9 +879,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- Loader Start -->
-    <div class="css-loader">
-        <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
-    </div>
+    
     <!-- Loader End -->
     <!-- Header Start -->
     <header class="position-absolute w-100">
@@ -1466,11 +1445,11 @@ Utilise our well situated shops to propel your business forward with access to t
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-						<div class="map col-md-6"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" height="560px" width="700px" frameborder="0" class="map" id="map-canvas" allowfullscreen style="position: relative;"></iframe>
-						</div>
-					 </div>
-				<br>
+							<div class="col-md-6"  id="map" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" id="map" allowfullscreen></iframe>
+							</div>
+					    </div>
+				    <br>
 				
 	<div class="col-md-8" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
 	<div class="swiper-container clients-slider">
