--- a/shops.html
+++ b/shops.html
@@ -73,14 +73,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		overflow-y: auto;
 	}
 	
-	.map {
-	height: 500px;
-	width:700px;
-	display: block;
-	background: #f0f0f0;
-	margin: 20px 0 20px 0;
 	
-}
 	
 	 /*media quary */
 @media(max-width:420px) {
@@ -143,7 +136,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
 </div>
 
 <div id="fb-root"></div>
@@ -320,8 +313,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-						<div class="col-md-7" id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map-canvas" style="border:0" allowfullscreen></iframe>
+						<div class="col-md-7" id="map" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map" style="border:0" allowfullscreen></iframe>
 							</div>
 					 </div>
 				<br>
