--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -260,7 +260,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
 </div>
 
 <div id="fb-root"></div>
@@ -285,7 +285,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
                         <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services..."><i class="fa fa-whatsapp"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </nav>
@@ -325,7 +325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </header>
     <!-- Header End -->
     <!-- Hero Start -->
-    <section class="hero"  Style="background-image: url('https://scontent.fabb1-1.fna.fbcdn.net/v/t1.0-9/59668780_921415561583878_3164282086920028160_o.jpg?_nc_cat=109&_nc_oc=AQnR_Yfo5_HKbemA3ts8mjZMImkEtgsyjK6vitXDtWRqcSgJfAo4Lz8xM1mMoiZgam8&_nc_ht=scontent.fabb1-1.fna&oh=24b25b0e18aa195b4af9360cc9f8e361&oe=5DD05C58') ">
+    <section class="hero"  Style="background-image: url('https://kingstinejo.com/modules/homeslider/images/1795e25992cf7317e5592ccbfa9986a4b81d420a_banner5.jpg') ">
         <div class="container">
             <div class="row">
                 <div class="col-12 offset-md-1 col-md-11">
@@ -389,14 +389,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://scontent.fabb1-1.fna.fbcdn.net/v/t1.0-9/68241210_989237948134972_6768076908908249088_n.jpg?_nc_cat=110&_nc_oc=AQlI_qedbdM_WVbRbiOAvn7RYmM7BeIoJjJjQQs3al9gHaPcH8IsT06AwPxKGfTdZ8c&_nc_ht=scontent.fabb1-1.fna&oh=752645871c56d71780d15423c7e5299b&oe=5E0804A4"  height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
+								<img src="https://img.foodbevg.com/1/v/t1.0-9/s720x720/64932854_954997424892358_5894168419858644992_n.png?_nc_cat=103&_nc_oc=AQn6ShvMPTfhs4ep-VXlVCRvx8QJZlSHMufbuw7P9mrDLOzqBZCGRE9ehvfCoXi4U6NkpczL-X2dEZXN5qUok28K&_nc_ht=scontent.xx&oh=4e070976e65e61a0f12ccd8912955c16&oe=5D7B9879"  height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
 							</div>
 						</div></div>
 						
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://scontent.fabb1-1.fna.fbcdn.net/v/t1.0-9/68674302_995914507467316_4412006576450174976_n.jpg?_nc_cat=102&_nc_oc=AQkJMEktg65MoKsWV6nMHq3kVE_0JIaxGxIu-aTCCvT0QFEVIbqCooa_F32OZL0Llys&_nc_ht=scontent.fabb1-1.fna&oh=579fe52ff351646b8da3a7eee7576417&oe=5DD55832" height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
+								<img src="https://scontent-lga3-1.cdninstagram.com/vp/77b151f7d3d4d5d138775fbfc9d8015c/5DB83B42/t51.2885-15/fr/e15/s1080x1080/58722677_526863451051483_2774287056960760170_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com" height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
 							</div>
 						</div></div>
 							
@@ -597,7 +597,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls | All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
