--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@ a {
 	margin-left: -25px;
 }
 .contact1 {
-	background-image: url("http://www.infinityflamesoft.com/html/abal-preview/assets/img/contact_back.jpg");
+	background-image: url("http://infinityflamesoft.com/html/abal-preview/assets/img/contact_back.jpg");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -192,6 +192,9 @@ textarea {
 .single-contact p {
 	font-size: 15px;
 	font-weight: 400;
+}
+.single-contact a {
+	color: #fff;
 }
 .contact-form button[type="submit"] {
 	background-color: #ee1515;
@@ -269,7 +272,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
 </div>
 
 <div id="fb-root"></div>
@@ -294,7 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
                         <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services..."><i class="fa fa-whatsapp"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </nav>
@@ -318,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="nav-item"><a class="nav-link" href="Kingstine-JoFoods.html">Kingstine-Jo Foods</a></li>
                         <li class="nav-item"><a class="nav-link" href="shops.html">Shops</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                    </ul>
+					</ul>
                     <form class="bg-white search-form" method="get" id="searchform">
                         <div class="input-group">
                             <input class="field form-control" id="s" name="s" type="text" placeholder="Search">
@@ -431,12 +434,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <div class="single-contact">
                         <i class="fa fa-phone"></i>
                         <h5>Phone</h5>
-                        <p>(+234)0814 076 1125, (+234)0805 105 5471, (+234)0802 695 8952</p>
+                        <p>(+234) 0814 076 1125, (+234) 0805 105 5471, (+234) 0802 695 8952</p>
+                     </div>
+					 <div class="single-contact">
+                        <i class="fa fa-whatsapp"></i>
+                        <h5>Whatsapp</h5>
+                        <p><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services...">(+234) 0706 768 4009</a></p>
                      </div>
                      <div class="single-contact">
                         <i class="fa fa-envelope"></i>
                         <h5>Email</h5>
-                        <p>info@ggeventhalls.com</p>
+                        <p><a href="mailto:info@ggeventhalls.com">info@ggeventhalls.com</a></p>
                      </div>
                 </div>
             </div>
@@ -550,7 +558,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls | All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
