--- a/index.html
+++ b/index.html
@@ -780,6 +780,28 @@ form input{
 
                          /*media quary */
 @media(max-width:420px) {
+   
+  
+form input{ 
+	display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
+}
+	
+	.item-card {
+		margin-bottom: 5%;
+	}
+	
+	.card-container, .wrapper {
+		margin-bottom: 5%;
+}
+
+	.map {
+		padding-right: 50px;
+		display:inline-block; width:50%; padding:20px; margin:20px;
+	}
+}
+
+
+	@media(max-width:420px) {
 	.featured-img {
 		margin-left: 0%; margin:15px; border-radius:1%; margin-top: 2%;
 	}
@@ -792,17 +814,10 @@ form input{
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 	
-form input{ 
-	display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
-}
-	
-	.item-card {
-		margin-bottom: 5%;
+	.map {
+	padding-right: 50px;
+	display:inline-block; width:50%; padding:20px; margin:20px;
 	}
-	
-	.card-container, .wrapper {
-		margin-bottom: 5%;
-}
 }
 
 	@media(max-width:767px) {
@@ -833,10 +848,14 @@ form input{
     margin-top: 5%;
 	
   }
-  #map {
-    margin-top: 5%;
+  
+  .map {
+	height: 685px;
+	width: 100%;
+	display: block;
+	background: #f0f0f0;
+	margin: 50px 0 20px 0;
 }
-
 </style>
 </head>
 
@@ -870,7 +889,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
 </div>
 
 <div id="fb-root"></div>
@@ -879,7 +898,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- Loader Start -->
-    
+    <div class="css-loader">
+        <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
+    </div>
     <!-- Loader End -->
     <!-- Header Start -->
     <header class="position-absolute w-100">
@@ -893,7 +914,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
                         <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services..."><i class="fa fa-whatsapp"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </nav>
@@ -1392,7 +1413,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <p class="desc">Hall1 - 600 Seaters</p>
                         <p class="price">&#8358 200,000</p>
                         <p>Access to great & amazing event hall amenities </p>
-                        <a href="contact.html" class="btn btn-primary">Book Now</a>
+                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall1%20-%20600%20Seaters%20ggeventshall%20package..." class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -1410,7 +1431,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <p>Free Changing Room</p>
                         <p>Access to Stage/Platform</p>
                         <p>Free Store room</p>
-                        <a href="contact.html" class="btn btn-primary">Book Now</a>
+                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall2%20-%20Dual%20Space%20ggeventshall%20package..." class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -1425,7 +1446,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <p class="desc">Hall3 - 1200 Seaters</p>
                         <p class="price">&#8358 150,000+</p>
                         <p>Access to great & amazing event hall amenities</p>
-                        <a href="contact.html" class="btn btn-primary">Book Now</a>
+                        <a href="https://wa.me/2347067684009?text=Hello%2C%20I%20would%20like%20to%20book%20your%20Hall3%20-%201200%20Seaters%20ggeventshall%20package..." class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
                             <path fill-rule="evenodd" fill="rgb(238, 21, 21)"
                                 d="M39.000,31.999 C39.000,31.999 -21.000,86.500 9.000,121.999 C39.000,157.500 91.000,128.500 104.000,160.999 C117.000,193.500 141.000,201.000 150.000,183.000 C159.000,165.000 172.000,99.000 167.000,87.000 C162.000,75.000 170.000,63.000 152.000,45.000 C134.000,27.000 128.000,15.999 116.000,11.000 C104.000,6.000 89.000,-0.001 89.000,-0.001 L39.000,31.999 Z" />
@@ -1445,11 +1466,11 @@ Utilise our well situated shops to propel your business forward with access to t
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-							<div class="col-md-6"  id="map" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" id="map" allowfullscreen></iframe>
-							</div>
-					    </div>
-				    <br>
+						<div class="map col-md-6"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" height="560px" width="700px" frameborder="0" class="map" id="map-canvas" allowfullscreen style="position: relative;"></iframe>
+						</div>
+					 </div>
+				<br>
 				
 	<div class="col-md-8" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
 	<div class="swiper-container clients-slider">
@@ -1581,7 +1602,7 @@ Utilise our well situated shops to propel your business forward with access to t
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls | All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
