--- a/shops.html
+++ b/shops.html
@@ -73,7 +73,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		overflow-y: auto;
 	}
 	
+	.map {
+	height: 500px;
+	width:700px;
+	display: block;
+	background: #f0f0f0;
+	margin: 20px 0 20px 0;
 	
+}
 	
 	 /*media quary */
 @media(max-width:420px) {
@@ -136,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   page_id="1016450635227960"
   theme_color="#ee1515"
   logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online to assist you.">
+  logged_out_greeting="Need assistance? Talk with an agent now! Our Live Chat team are online and waiting to assist you.">
 </div>
 
 <div id="fb-root"></div>
@@ -161,7 +168,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
                         <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://wa.me/+2347067684009?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20Great%20God%20Eventshall%20services..."><i class="fa fa-whatsapp"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </nav>
@@ -313,8 +320,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-						<div class="col-md-7" id="map" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map" style="border:0" allowfullscreen></iframe>
+						<div class="col-md-7" id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map-canvas" style="border:0" allowfullscreen></iframe>
 							</div>
 					 </div>
 				<br>
@@ -488,7 +495,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 ggeventhalls | All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --> Designed by<a href="https://wa.me/2348187292382?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20web%20design%20services...">Eracreative</a></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#" class="promotion-btn" onclick="window.open('https://webmail.migadu.com', '_blank');return true;"> <i class="fa fa-weixin" aria-hidden="true"></i>WEB MAIL </a>
 					<a href="#">God is Great!</a></p>
                 </div>
